--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <!-- Floating WhatsApp Button -->
-<a href="https://wa.me/9199046759988" class="whatsapp-float" target="_blank">
+<a href="https://wa.me/919046759988" class="whatsapp-float" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
   <!-- Back to Top Button -->
@@ -66,33 +66,39 @@
 
   <!-- Projects Section (placeholder for now) -->
  <!-- Projects Section -->
+<!-- Projects Section -->
 <section class="section projects">
-    <h2>My Projects</h2>
-    <div class="projects-container">
-  
-      <!-- Project Card 1 -->
-      <div class="project-card">
-        <img src="images/project1.png" alt="Payroll Management System">
-        <h3>Payroll Management System</h3>
-        <p>A VB.NET + MS SQL desktop solution for automating employee payroll, tax, and reports. Includes biometric integration and Crystal Reports.</p>
-      </div>
-  
-      <!-- Project Card 2 -->
-      <div class="project-card">
-        <img src="images/project2.png" alt="Python Desktop App">
-        <h3>Inventory Tracker (Python)</h3>
-        <p>Built with Python + SQLite, this system manages stock levels, supplier records, and generates analytics reports for SMEs.</p>
-      </div>
-  
-      <!-- Project Card 3 -->
-      <div class="project-card">
-        <img src="images/project3.png" alt="Google Sheets Workflow">
-        <h3>Google Sheets HR System</h3>
-        <p>Automated HR workflows using Google Sheets, Forms, and Apps Script. Handles leave management, approvals, and MIS dashboards.</p>
-      </div>
-  
+  <h2>My Projects</h2>
+  <div class="projects-container">
+
+    <!-- Project Card 1 -->
+    <div class="project-card">
+      <img src="images/project1.png" alt="Bulk Email Sender">
+      <h3>Bulk Email Sender</h3>
+      <p>A VB.NET desktop application for sending bulk email with attachments.</p>
+      <a href="projects/bulk-email.html" class="btn-view">View Details →</a>
     </div>
-  </section>
+
+    <!-- Project Card 2 -->
+    <div class="project-card">
+      <img src="images/project2.png" alt="Python Desktop App">
+      <h3>Inventory Tracker (Python)</h3>
+      <p>Built with Python + SQLite, this system manages stock levels, supplier records, and generates analytics reports for SMEs.</p>
+      <a href="projects/inventory-tracker.html" class="btn-view">View Details →</a>
+    </div>
+
+    <!-- Project Card 3 -->
+    <div class="project-card">
+      <img src="images/project3.png" alt="Google Sheets Workflow">
+      <h3>Google Sheets HR System</h3>
+      <p>Automated HR workflows using Google Sheets, Forms, and Apps Script. Handles leave management, approvals, and MIS dashboards.</p>
+      <a href="projects/google-sheets-hr.html" class="btn-view">View Details →</a>
+    </div>
+
+  </div>
+</section>
+
+
   
 
   <!-- Footer -->
