Added project case study pages and template

--- a/projects/auto-pulse.html
+++ b/projects/auto-pulse.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>AutoPulse – Client Reminder System | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>AutoPulse – Client Reminder System</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        AutoPulse is a desktop application designed to automate client reminders through SMS and email. 
+        It helps businesses ensure timely follow-ups for payments, subscriptions, and renewals without manual effort.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Automated reminders for due payments and renewals</li>
+          <li>Customizable SMS and email templates</li>
+          <li>Client database with contact management</li>
+          <li>Scheduling system with recurring reminders</li>
+          <li>Reports and reminder history logs</li>
         </ul>
       </section>
 
@@ -45,7 +46,7 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
+          <img src="../images/project9.png" alt="AutoPulse Dashboard">
           
         </div>
       </section>
@@ -53,13 +54,14 @@
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export</p>
+        <p>VB.NET, Windows Forms, MS SQL Server, SMTP, (Previously created on Google Sheets and Google Forms based Sysytem using Apps Script) </p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced challenges with integrating third-party email gateways and handling failed deliveries. 
+        Learned how to implement retry mechanisms, improve exception handling, and securely store client communication data.</p>
       </section>
 
     </div>
