--- a/projects/bulk-pdf-rename.html
+++ b/projects/bulk-pdf-rename.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>Bulk PDF Rename | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,22 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>Bulk PDF Rename</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A VB.NET desktop tool that allows users to rename large sets of PDF files 
+        automatically using Excel/CSV mappings, reducing manual effort and errors.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Import file name mappings from Excel/CSV</li>
+          <li>Batch rename PDFs in selected folder</li>
+          <li>Error logs for missing/unmatched files</li>
+          <li>User-friendly interface for bulk operations</li>
         </ul>
       </section>
 
@@ -45,7 +45,7 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
+          <img src="../images/project2.png" alt="Main Interface">
           
         </div>
       </section>
@@ -53,13 +53,15 @@
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export</p>
+        <p>VB.NET, Windows Forms, File I/O, Excel Import and Export</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced challenges with handling special characters in file names and optimizing 
+        performance for large batches of files. Learned about robust error handling and 
+        file system operations in VB.NET.</p>
       </section>
 
     </div>
