--- a/projects/dyna-sort.html
+++ b/projects/dyna-sort.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>DYNA SORT | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>DYNA SORT – File & Folder Sorting App</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A VB.NET desktop utility that automatically organizes files and folders 
+        based on type, extension, or custom rules, improving desktop and document management efficiency.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Sort files by type (Documents, Images, Videos, etc.)</li>
+          <li>Custom rules for extensions and naming</li>
+          <li>Auto-create folders dynamically</li>
+          <li>Batch sorting with one click</li>
+          <li>Lightweight and fast performance</li>
         </ul>
       </section>
 
@@ -45,7 +46,7 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
+          <img src="../images/project8.png" alt="DYNA SORT Main UI">
           
         </div>
       </section>
@@ -53,13 +54,15 @@
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export</p>
+        <p>VB.NET, Windows Forms, File I/O API</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced issues handling file conflicts and ensuring files weren’t duplicated or lost. 
+        Learned how to manage file I/O operations safely, implement error handling, 
+        and create user-friendly settings for custom rules.</p>
       </section>
 
     </div>
