--- a/projects/happy-business-crm.html
+++ b/projects/happy-business-crm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>Happy Business CRM | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>Happy Business CRM</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A customer relationship management (CRM) system developed to help small and medium businesses 
+        manage leads, clients, sales pipelines, and support tickets in a streamlined way.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Lead and client management</li>
+          <li>Sales pipeline with deal tracking</li>
+          <li>Task assignments and reminders</li>
+          <li>Customer support ticketing</li>
+          <li>Analytics dashboard with KPIs</li>
         </ul>
       </section>
 
@@ -45,21 +46,24 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
-          
+          <img src="../images/project3.png" alt="CRM Dashboard">
+          <img src="../images/project4.png" alt="Lead Management Module">
+          <img src="../images/project5.png" alt="Company Management Module">
         </div>
       </section>
 
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export</p>
+        <p>VB.NET, MS SQL Server, Windows Forms, Crystal Reports, File I/O, Excel Import and Export, SMTP</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced challenges in designing scalable database relationships and ensuring smooth 
+        performance with growing client records. Learned database optimization, transaction 
+        management, and how to implement role-based access control effectively.</p>
       </section>
 
     </div>
