--- a/projects/inventory-management.html
+++ b/projects/inventory-management.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>Inventory Management System | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>Inventory Management System</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A desktop application built to help businesses manage stock levels, suppliers, 
+        purchase records, and generate real-time inventory analytics.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Product catalog with categories</li>
+          <li>Supplier and purchase order management</li>
+          <li>Stock-in and stock-out tracking</li>
+          <li>Barcode support for faster operations</li>
+          <li>Reports on stock levels and re-order alerts</li>
         </ul>
       </section>
 
@@ -45,21 +46,23 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
-          
+          <img src="../images/project6.png" alt="Inventory Dashboard">
+          <img src="../images/project7.png" alt="Stock Management Screen">
         </div>
       </section>
 
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export</p>
+        <p>VB.NET, MS SQL Server, Windows Forms, Crystal Reports, File I/O, Excel Import and Export, SMTP</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced challenges in syncing multiple users’ access to the database 
+        and maintaining data consistency. Learned database normalization, 
+        transaction handling, and better UX design for stock workflows.</p>
       </section>
 
     </div>
