--- a/index.html
+++ b/index.html
@@ -81,19 +81,45 @@
 
     <!-- Project Card 2 -->
     <div class="project-card">
-      <img src="images/project2.png" alt="Python Desktop App">
-      <h3>Inventory Tracker (Python)</h3>
-      <p>Built with Python + SQLite, this system manages stock levels, supplier records, and generates analytics reports for SMEs.</p>
-      <a href="projects/inventory-tracker.html" class="btn-view">View Details →</a>
+      <img src="images/project2.png" alt="Bulk PDF Rename">
+      <h3>Bulk PDF Rename</h3>
+      <p>A VB.NET desktop tool that allows users to rename large sets of PDF files</p>
+      <a href="projects/bulk-pdf-rename.html" class="btn-view">View Details →</a>
     </div>
 
     <!-- Project Card 3 -->
     <div class="project-card">
-      <img src="images/project3.png" alt="Google Sheets Workflow">
-      <h3>Google Sheets HR System</h3>
-      <p>Automated HR workflows using Google Sheets, Forms, and Apps Script. Handles leave management, approvals, and MIS dashboards.</p>
-      <a href="projects/google-sheets-hr.html" class="btn-view">View Details →</a>
+      <img src="images/project3.png" alt="Happy Business CRM">
+      <h3>Happy Business CRM</h3>
+      <p>A customer relationship management (CRM) system developed to help small and medium businesses </p>
+      <a href="projects/happy-business-crm.html" class="btn-view">View Details →</a>
     </div>
+
+    <!-- Project Card 4 -->
+    <div class="project-card">
+      <img src="images/project6.png" alt="Inventory Management System">
+      <h3>Inventory Management System</h3>
+      <p>A customer relationship management (CRM) system developed to help small and medium businesses </p>
+      <a href="projects/inventory-management.html" class="btn-view">View Details →</a>
+    </div>
+
+    <!-- Project Card 5 -->
+  <div class="project-card">
+    <img src="images/project8.png" alt="DYNA SORT – File & Folder Sorting App">
+    <h3>DYNA SORT</h3>
+    <p>A VB.NET desktop utility that automatically organizes files and folders based on type, extension, or custom rules.</p>
+    <a href="projects/dyna-sort.html" class="btn-view">View Details →</a>
+  </div>
+
+  <!-- Project Card 6 -->
+  <div class="project-card">
+    <img src="images/project9.png" alt="AutoPulse – Client Reminder System">
+    <h3>AutoPulse</h3>
+    <p>A client reminder system that automates email notifications for due payments, renewals, and follow-ups.</p>
+    <a href="projects/auto-pulse.html" class="btn-view">View Details →</a>
+  </div>
+
+
 
   </div>
 </section>
