Added project case study pages and template

--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
     <a href="projects/auto-pulse.html" class="btn-view">View Details →</a>
   </div>
 
+  <!-- Project Card 7 -->
+  <div class="project-card">
+    <img src="images/project9.png" alt="Payslip Generator">
+    <h3>Payslip Gen</h3>
+    <p>A VB.NET desktop application developed for HR and finance teams to automatically generate employee payslips.</p>
+    <a href="projects/payslip-gen.html" class="btn-view">View Details →</a>
+  </div>
+
+  <!-- Project Card 8 -->
+  <div class="project-card">
+    <img src="images/project10.png" alt="Bulk WhatsApp Sender">
+    <h3>Bulk WhatsApp Sender</h3>
+    <p>A Python Tkinter + Selenium app for sending bulk WhatsApp messages with text, emojis, and attachments.</p>
+    <a href="projects/bulk-whatsapp.html" class="btn-view">View Details →</a>
+  </div>
 
 
   </div>
