--- a/projects/bulk-whatsapp.html
+++ b/projects/bulk-whatsapp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>Bulk WhatsApp Sender | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>Bulk WhatsApp Sender</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A Python-based desktop application built with Tkinter and Selenium that automates sending bulk WhatsApp messages. 
+        Designed to help businesses and HR teams streamline communication with customers or employees.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Import contacts from Excel/CSV files</li>
+          <li>Send personalized messages in bulk</li>
+          <li>Supports text, emojis, and attachments</li>
+          <li>WhatsApp Web automation using Selenium</li>
+          <li>Logs and error handling for failed deliveries</li>
         </ul>
       </section>
 
@@ -45,21 +46,23 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
-          
+          <img src="../images/project11.png" alt="Bulk WhatsApp Sender UI">
+          <img src="../images/project12.png" alt="Automated message sending">
         </div>
       </section>
 
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export (Previous version was created in Python) </p>
+        <p>Python, Tkinter, Selenium, Pandas</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>One major challenge was handling WhatsApp Web’s dynamic loading and QR code authentication. 
+        Learned advanced Selenium automation techniques, managing delays, and exception handling to 
+        make the process stable. Also explored Pandas for handling contact lists efficiently.</p>
       </section>
 
     </div>
