--- a/projects/happy-business-crm.html
+++ b/projects/happy-business-crm.html
@@ -55,7 +55,7 @@
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, MS SQL Server, Windows Forms, Crystal Reports, File I/O, Excel Import and Export, SMTP</p>
+        <p>VB.NET, MS SQL Server, Windows Forms, Crystal Reports, File I/O, Excel Import and Export, SMTP (Previous version created in Python and Sqlite) </p>
       </section>
 
       <!-- Challenges / Learnings -->
