--- a/projects/payslip-gen.html
+++ b/projects/payslip-gen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bulk Email Sender | Portfolio</title>
+  <title>Payslip Generator | Portfolio</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -22,22 +22,23 @@
     <div class="container project-detail">
 
       <!-- Project Title -->
-      <h1>Bulk Email Sender</h1>
+      <h1>Payslip Generator</h1>
 
       <!-- Project Description -->
       <p class="project-desc">
-        A VB.NET desktop application that allows users to send bulk emails with attachments, 
-        streamlining communication for businesses and HR teams.
+        A VB.NET desktop application developed for HR and finance teams to automatically generate employee payslips. 
+        The system calculates gross salary, deductions, and net pay, then creates ready-to-print PDF payslips.
       </p>
 
       <!-- Features -->
       <section>
         <h2>Features</h2>
         <ul>
-          <li>Import recipient list from Excel/CSV</li>
-          <li>Attach files to each email</li>
-          <li>Supports SMTP authentication</li>
-          <li>Delivery status logs</li>
+          <li>Employee master data management</li>
+          <li>Salary calculation with allowances and deductions</li>
+          <li>Bulk PDF payslip generation</li>
+          <li>Integration with attendance/biometric data</li>
+          <li>Secure payroll record storage</li>
         </ul>
       </section>
 
@@ -45,7 +46,7 @@
       <section>
         <h2>Screenshots</h2>
         <div class="screenshot-grid">
-          <img src="../images/project1.png" alt="Main UI">
+          <img src="../images/project10.png" alt="Payslip Dashboard">
           
         </div>
       </section>
@@ -53,13 +54,15 @@
       <!-- Technologies -->
       <section>
         <h2>Technologies Used</h2>
-        <p>VB.NET, Windows Forms, SMTP, Excel Import and Export (Previous version was created in Python) </p>
+        <p>VB.NET, Windows Forms, MS SQL Server, Crystal Reports</p>
       </section>
 
       <!-- Challenges / Learnings -->
       <section>
         <h2>Challenges & Learnings</h2>
-        <p>Faced SMTP authentication issues with different email providers. Learned how to handle exceptions and optimize email batching for better performance.</p>
+        <p>Faced challenges in integrating biometric attendance data into payroll calculations and 
+        ensuring accurate tax deductions. Learned to optimize SQL queries for payroll processing and 
+        design Crystal Reports templates for professional payslip output.</p>
       </section>
 
     </div>
