Added project case study pages and template

--- a/index.html
+++ b/index.html
@@ -135,6 +135,32 @@
     <a href="projects/bulk-whatsapp.html" class="btn-view">View Details →</a>
   </div>
 
+  <!-- Project Card 9 -->
+  <div class="project-card">
+    <img src="images/project13.png" alt="Hotel Management System">
+    <h3>Hotel Management System</h3>
+    <p>A Google Sheets & Forms based system with Apps Script automation and SMTP integration for bookings and guest management.</p>
+    <a href="projects/hotel-management.html" class="btn-view">View Details →</a>
+  </div>
+
+  <!-- Project Card 10 -->
+  <div class="project-card">
+    <img src="images/project15.png" alt="ACC Infotech CRM ">
+    <h3>ACC Infotech CRM </h3>
+    <p>A Google Sheets & Forms based system with Apps Script automation and SMTP integration for lightweight CRM solution.</p>
+    <a href="projects/acc-crm.html" class="btn-view">View Details →</a>
+  </div>
+
+  <!-- Project Card 11 -->
+  <div class="project-card">
+    <img src="images/project17.png" alt="Attendance Tracker ">
+    <h3>Attendance Tracker </h3>
+    <p>A Google Sheets & Forms based system with Apps Script automation and SMTP integration for A smart attendance management solution.</p>
+    <a href="projects/attendance-tracker.html" class="btn-view">View Details →</a>
+  </div>
+
+
+
 
   </div>
 </section>
