--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <style>
+    /* Notification bubble */
+    #status {
+      position: fixed;
+      top: 20px;
+      right: -400px; /* hidden off screen */
+      background: #333;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      font-size: 14px;
+      opacity: 0;
+      transition: all 0.5s ease;
+      z-index: 1000;
+    }
+    #status.show {
+      right: 20px; /* slide in */
+      opacity: 1;
+    }
+    #status.success { background: #28a745; } /* green */
+    #status.error { background: #dc3545; }   /* red */
+    #status.warning { background: #ffc107; color: #333; } /* yellow */
+  </style>
 </head>
+
 <!-- Floating WhatsApp Button -->
 <a href="https://wa.me/919046759988" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  <i class="fab fa-whatsapp"></i>
+</a>
   
 <body>
 
@@ -36,12 +62,15 @@
     <div class="contact-container">
 
       <!-- Contact Form -->
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea rows="5" placeholder="Your Message" required></textarea>
+      <form id="contact-form" action="https://formspree.io/f/mqadolpp" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
         <button type="submit" class="btn">Send Message</button>
       </form>
+
+      <!-- Status Bubble -->
+      <div id="status"></div>
 
       <!-- Contact Info -->
       <div class="contact-info">
@@ -69,6 +98,43 @@
       <a href="https://linkedin.com/in/soutanbasak" target="_blank">LinkedIn</a>
     </p>
   </footer>
+
+  <!-- Formspree JS -->
+  <script>
+    const form = document.getElementById('contact-form');
+    const status = document.getElementById('status');
+
+    function showStatus(message, type="success") {
+      status.textContent = message;
+      status.className = ""; // reset
+      status.classList.add("show", type);
+      setTimeout(() => {
+        status.classList.remove("show");
+      }, 4000); // hide after 4s
+    }
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+
+      try {
+        const response = await fetch(form.action, {
+          method: form.method,
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+
+        if (response.ok) {
+          showStatus("✅ Thank you! Your message has been sent.", "success");
+          form.reset();
+        } else {
+          showStatus("❌ Oops! Something went wrong.", "error");
+        }
+      } catch (error) {
+        showStatus("⚠️ Network error. Please try again.", "warning");
+      }
+    });
+  </script>
 
 </body>
 </html>
